# WeArticleBot

./: Cargo.toml  Readme.md
crates/bot/: Cargo.toml
crates/bot/src/: event.rs  handler.rs  main.rs
crates/bot/src/handler/: info.rs  login.rs  mod.rs  search.rs
crates/lark/: Cargo.toml
crates/lark/src/: data.rs  error.rs  lib.rs  session.rs  utils.rs
crates/lark/src/api/: auth.rs  image.rs  message.rs  mod.rs  response.rs
crates/lark/src/event/: dispatcher.rs  event.rs  message.rs  mod.rs
crates/lark/src/ws/: client.rs  config.rs  mod.rs  proto.rs
crates/wechat/: Cargo.toml
crates/wechat/src/: api.rs  error.rs  lib.rs  session.rs  utils.rs
crates/wechat/src/api/: data.rs  info.rs  login.rs  mod.rs  search.rs
