[workspace]
members = [
    "crates/bot",
    "crates/lark",
    "crates/wechat",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Fontlos <fontlos@fontlos.com>"]

[workspace.dependencies]
lark = { path = "crates/lark" }
wechat = { path = "crates/wechat" }

bytes = "1.11.1"
log = "0.4.29"
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2"
tokio = "1.52.3"
