[package]
name = "lark"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
bytes = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "query"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

futures-util = "0.3"
prost = "0.14"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
arc-swap = "1.9.1"
