[package]
name = "wechat"
version.workspace = true
edition.workspace = true
authors.workspace = true


[dependencies]
arc-swap ={ workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true, features = ["cookies", "form", "json", "query"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

cookie_store = "0.22.1"
rand = "0.10.1"
reqwest_cookie_store = "0.10.0"


